# routes/api.php
@@ -9,13 +9,15 @@ use Illuminate\Support\Facades\Route;
 
        Route::middleware('throttle:3,1')->group(function () {
          Route::post('/register', [AuthorizationController::class, 'register']);
-         Route::post('/reset-password', [AuthenticateController::class, 'resetPassword']);
-         Route::post('/verification-code-password-reset',[AuthenticateController::class, 'verificationCode']);
+        /* Route::post('/reset-password', [AuthenticateController::class, 'resetttPassword']);*/    //3
+         /*Route::post('/verification-code-password-reset',[AuthenticateController::class, 'verificationCode']);*/  //1
        });
 
 
+
+
       Route::middleware('throttle:3,1')->group(function () {
-        Route::post('/verification-code', [AuthenticateController::class, 'verifyCode']);
+        /*Route::post('/verification-code', [AuthenticateController::class, 'verifyCode']); */   //2
         Route::post('/verify-login-code',[AuthorizationController::class, 'verifyLoginCode']);
       });
 
@@ -25,6 +27,9 @@ use Illuminate\Support\Facades\Route;
       Route::post('/reset_verification_code', [AuthenticateController::class, 'resetVerificationCode']);
       Route::post('/email/resend', [EmailVerificationController::class, 'resend'])->name('verification.resend');
     });
+
+    Route::post('/password/forgot', [AuthorizationController::class, 'sendResetLink']);  //new
+    Route::post('/password/reset', [AuthorizationController::class, 'resetPassword'])->name('password.reset');  //new
 
      Route::post('/login', [AuthorizationController::class, 'login'])->middleware('throttle:5,1');
      Route::get('/email/verify/{id}', [EmailVerificationController::class, 'verify'])->middleware(['signed'])->name('verification.verify');
@@ -42,6 +47,8 @@ use Illuminate\Support\Facades\Route;
     });});
 
     Route::middleware(['auth:sanctum','token_expiry'])->post('/refresh', [AuthorizationController::class, 'refresh']);
+
+
 
 
 
